# latera

./: .gitattributes  .gitignore  analyze_current.txt  analyze_progress.txt  build_iap_output.txt  build_iap_output2.txt  build_iap_output3.txt  cargo_build_out.txt  cargo_build_release.txt  cargo_check2.txt  cargo_check_output.txt  cargo_check_output2.txt  cargo_check_output3.txt  cargo_check_output4.txt  cargo_check_output5.txt  cargo_check_output6.txt  cargo_check_output7.txt  cargo_check_sysinfo.txt  cargo_errors.txt  cargo_sysinfo_out.txt  cert_dump.txt  cert_result.txt  check_sysinfo.txt  clippy_output.txt  codegen2.txt  codegen_result.txt  codegen_result2.txt  dart_analyze.txt  flutter_build_out.txt  index.md  msix_create_out.txt  test_all.txt  test_config_output.txt  test_coord_output.txt  test_ocr_output.txt  test_out.txt  test_output.txt  test_output2.txt  test_output3.txt  test_output4.txt  (+12 more)
docs/: index.html
flutter/: .fvmrc  (+7 more)
rust/: Cargo.toml  api.rs  build_output.txt  check_db.rs  check_out.txt  frb_codegen.yaml  rustfmt.toml
rust/.cargo/: config.toml
rust/llama-cpp-sys-2-patched/: .cargo_vcs_info.json  Cargo.toml  build.rs
rust/llama-cpp-sys-2-patched/llama.cpp/ggml/src/ggml-vulkan/: CMakeLists.txt
rust/src/: error.rs  ffi_llm.rs  ffi_ocr.rs  ffi_rag.rs  ffi_search.rs  ffi_system.rs  frb_generated.rs  lib.rs  logging.rs  system_info.rs
rust/src/file_watcher/: events.rs  mod.rs
rust/src/indexer/: embeddings.rs  llm.rs  llm_engine.rs  mod.rs  ocr.rs  rag.rs  text_extractor.rs  transcriber.rs
rust/tests/: file_watcher_integration_test.rs
(+128 files in other folders)
